Add hadouken sound

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Streetfighter</title>
-	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesh	eet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -16,6 +16,7 @@
 			<div class="hadouken"></div>
 	</div>
 
+<audio id="hadouken-sound" src="sound/hadouken.mp3">
 
 
 
