Add instructions text

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Streetfighter</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesh	eet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -15,7 +16,10 @@
 			<div class="ryu-cool ryu-action"></div>
 		</div>
 			<div class="hadouken"></div>
+			<h2>Click on Ryu to throw a Hadouken fireball.Hold "x" to see Ryu in a cool position.</h2>
 	</div>
+
+
 
 <audio id="hadouken-sound" src="sound/hadouken.mp3">
 
