--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<h3>Click on Ryu to throw a fireball.  Press "x" and "m" to see Ryu in a cool pose.</h3>
 	<div class="main">
 		<div class="ryu">
 			<div class="ryu-still ryu-action"></div>
@@ -15,14 +16,17 @@
 			<div class="ryu-throwing ryu-action"></div>
 			<div class="ryu-cool ryu-action"></div>
 		</div>
-			<div class="hadouken"></div>
-			<h2>Click on Ryu to throw a Hadouken fireball.Hold "x" to see Ryu in a cool position.</h2>
+
+		<div class="hulk-ryu">
+			<div class="hulk-ryu-still hulk-ryu-action"></div>
+			<div class="hulk-ryu-ready hulk-ryu-action"></div>
+			<div class="hulk-ryu-throwing hulk-ryu-action"></div>
+			<div class="hulk-ryu-cool hulk-ryu-action"></div>
+		</div>
+		<div class="hulk-hadouken"></div>
+		<div class="hadouken"></div>
 	</div>
-
-
-
 <audio id="hadouken-sound" src="sound/hadouken.mp3">
-
 
 
 	<script src="http://code.jquery.com/jquery.min.js"></script>
